Try to fix noClassDefError with javax/xml/build